--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -22,19 +22,28 @@
   "number": "номер",
   "Use secret code": "Использовать секретный код",
   "competitions": "соревнования",
+  "Connected\ndevices": "Подключенные\nустройства",
+  "Checkpoints": "Чекпоинты",
   "visible": "",
   "Join": "Присоединиться",
   "Local log": "Локальный лог",
   "home": "домой",
+  "Exit": "Закрыть и выйти",
+  "Back": "Назад",
+  "Logout": "Выход",
+  "Create competition": "Создать соревнование",
+  "Edit competition": "Редактировать соревнование",
+  "Registration": "Регистрация",
   "Search by full name or number": "Искать по полному имени или номеру",
   "fio": "фио",
   "wait": "ожидание",
   "By NFC tag": "По метке NFC",
-  "Send sms": "Отправить sms",
+  "Send sms": "Отправить",
   "Set NFC tag": "Назначить метку NFC",
   "Clear NFC tag": "Очистить метку NFC",
   "Stop scanning NFC": "Прекратить сканирование NFC",
   "Scanning NFC tag": "Сканировать метку NFC",
+  "NFC tag is't found in DB": "NFC метка на нейдена в БД",
   "Passed marks: ": "Пройдено отметок: ",
   "Phone number": "Номер телефона",
   "Competition code": "Код соревнования",
@@ -52,5 +61,40 @@
   "Close: ": "Закрыть",
   "Order: ": "Порядок",
   "Title: ": "Название",
-  "This device is not assigned to a NFC reader": "Это устройство не назначено NFC считывателем"
+  "This device is not assigned to a NFC reader": "Это устройство не назначено NFC считывателем",
+  "Are you sure?": "Вы уверены?",
+  "This application will be closed": "Приложение будет закрыто",
+  "Yes": "Да",
+  "No": "Нет",
+  "Вarcode scan error: %s": "Ошибка сканирования штрихкода: %s",
+  "Competitions is't selected": "Соревнование не выбрано",
+  "This device is't READER in current competition!": "Это устройство не назначено считывателем для текущего соревнования!",
+  "Disable device sleeping": "Отключение засыпания устройства",
+  "Enable device sleeping": "Включение засыпания устройства",
+  "Athlete number is found": "Номер атлета найден",
+  "Athlete number is't found: %s": "Номер атлета не найден: %s",
+  "Current mark marked less than 5 minutes ago!": "Текущая метка отмечена менее 5 минут назад!",
+  "The Marshal's previous mark may have been missed": "Возможно пропущена предыдущая отметка маршала",
+  "The competition is over, time is up!": "Соревнование окончено, время вышло!",
+  "THE PASSAGE MARK RECORDED": "ПРОХОЖДЕНИЕ ТОЧКИ ЗАПИСАНО",
+  "All data will be lost": "Все данные будут потеряны",
+  "Uploading... %s": "Загрузка... %s",
+  "Create index error: %s": "Ошибка создания индекса: %s",
+  "Create table error: %s": "Ошибка создания таблицы: %s",
+  "Open DB error: %s": "Ошибка открытия БД: %s",
+  "Table %s dropped!": "Теблица %s удалена!",
+  "File size is zero": "Размер файла нулевой",
+  "File does't exists %s": "Файл не существует %s",
+  "This device is MULTIPLE READER of marks in current competition!": "Это устройство назначено считывателем для нескольких контрольных точек текущего соревнования",
+  "Anonymous\nuser": "Анонимный\nпользователь",
+  "Assign this device as a reader for the checkpoint %s": "Назначить это устройство считывателем для контрольной точки %s",
+  "Remove assignment": "Убрать назначение",
+  "Error assigning the reader for the checkpoint": "Ошибка устновки считывателя для контрольной точки",
+  "The device is installed as a reader": "Устройство установлено как считыватель",
+  "The device is removed from the readers checkpoint": "Устройство удалено из считывателей точки",
+  "[Race Org] Suggestion about application": "[Race Org] Предложение по приложению",
+  "NFC tag is assigned": "Nfc метка назначена",
+  "Batch commit error: %s": "Ошибка пакетной обработки: %s",
+  "Delete the passage of the mark %s": "Удалить прохождение отметки %s",
+  "This device is't manage checkpoint %s": "Это устройство не может управлять контрольной точкой %s"
 }
