--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -52,9 +52,9 @@
   "Class: ": "Класс: ",
   "Number: ": "Номер: ",
   "Phone no.: ": "Телефон: +7",
-  "Suggestions and suggestions send to the address": "Предложения и пожелания отправляйте на адрес",
+  "Suggestions and suggestions send to the address ": "Предложения и пожелания отправляйте на адрес ",
   "or to the telegram": "либо в telegram",
-  "A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\nThe winners are the athletes who have passed the greater (all) number of control points for a smaller number of time, in the order of points.": "Прототип приложения для организации соревнований, процесс прохождения которого связан с отметками времени на контрольных точках.\nПобедителями считаются атлеты прошедшие большее (все) кол-во контрольных точек за за меньшее кол-во времени, в порядке следования точек.",
+  "A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\n\nThe winners are the athletes who have passed the greater (all) number of control points for a smaller number of time, in the order of points.": "Прототип приложения для организации соревнований, процесс прохождения которого связан с отметками времени на контрольных точках.\nПобедителями считаются атлеты прошедшие большее (все) кол-во контрольных точек за за меньшее кол-во времени, в порядке следования точек.",
   "Select\ncompetition": "Назначить\nсоревнование",
   "Total registered athletes: ": "Всего зарегестрированно участников: ",
   "Open: ": "Открыть",
