--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -107,5 +107,5 @@
   "Permission deny to competition": "Недостаточно прав для просмотра соревнования",
   "Competition not found": "Соревнование не найдено",
   "Secret code for ": "Секретный код для ",
-  "Code: ": "Код: ",
+  "Code: ": "Код: "
 }
