--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -109,5 +109,8 @@
   "Secret code for ": "Секретный код для ",
   "Code: ": "Код: ",
   "Private Policy": "Политика конфиденциальности",
-  "About": "О нас"
+  "About": "О нас",
+  "Start lists": "Стартовые листы",
+  "Start group: ": "Старотовая группа",
+  "Athlete: ": "Атлет: "
 }
