--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -10,7 +10,8 @@
   "Open": "Открыть",
   "Close": "Закрыть",
   "Athlete number": "Номер атлета",
-  "Cancel": "Отметить",
+  "Cancel": "Отменить",
+  "Mark": "Отметить",
   "Scan QR code": "Сканировать QR код",
   "Set this device to admin": "Установить это устройство как административное",
   "Enter with Social account": "Вход через социальные сети",
@@ -28,6 +29,10 @@
   "visible": "",
   "Join": "Присоединиться",
   "Local log": "Локальный лог",
+  "Upload to server": "Загрузи данные на сервер",
+  "Drop Local log": "Удалить локальный лог",
+  "All groups of this class will be deleted!": "Все группы этого класса будут удалены!",
+  "The group %s will not be deleted!": "Группа %s будет удалена!",
   "home": "домой",
   "Exit": "Закрыть и выйти",
   "Back": "Назад",
@@ -113,5 +118,30 @@
   "Start lists": "Стартовые листы",
   "Start group: ": "Старотовая группа",
   "Athlete: ": "Атлет: ",
-  "Size of group is more than athletes count (%s) in class": "Размер группы больше кол-ва атлетов (%s) в классе"
+  "Size of group is more than athletes count (%s) in class": "Размер группы больше кол-ва атлетов (%s) в классе",
+  "Start": "Старт",
+  "Resume": "Продолжить",
+  "Pause": "Пауза",
+  "Reset": "Сброс",
+  "Not started": "Не стартовал",
+  "Split athletes": "Разделить атлетов",
+  "Group size": "Размер группы",
+  "Split athletes by\nspecific group size": "Разделить атлетов на\nгруппы выбранного размера",
+  "Create groups by\nresults of previous stage": "Создать группы на основе\nрезультатов предыдущего этапа",
+  "Create group": "Создать группу",
+  "Group: ": "Группа:",
+  "Selected: ": "Выбрано: ",
+  "Delete": "Удалить",
+  "Save": "Сохранить",
+  "In group": "В группе",
+  "Out of group": "Вне группы",
+  "Show athlete in other group": "Показывать алтетов в других группах",
+  "Start time: ": "Время старта: ",
+  "Modified %s athlete(s)": "Изменено %s атлета(ов)",
+  "Removed %s athlete(s)": "Удалено %s атлета(ов)",
+  "Group %s is started\nat %d": "Группа %s стартовала в %s",
+  "Split athletes by group": "Разделить атлетов на группы",
+  "Remove all groups": "Удалить все группы",
+  "Athletes not in groups: ": "Атлеты не в группах: ",
+  "Athletes in group: ": "Атлеты в группе: "
 }
