--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -143,5 +143,6 @@
   "Split athletes by group": "Разделить атлетов на группы",
   "Remove all groups": "Удалить все группы",
   "Athletes not in groups: ": "Атлеты не в группах: ",
-  "Athletes in group: ": "Атлеты в группе: "
+  "Athletes in group: ": "Атлеты в группе: ",
+  "Countdown": "Обратный отсчет"
 }
