--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1,7 +1,7 @@
 {
   "app.name": "RaceOrg",
   "Scan": "Сканировать",
-  "Search shop": "Остановить поиск",
+  "Search stop": "Остановить поиск",
   "assigned": "назначено",
   "not assigned": "не назначено",
   "Call": "Позвонить",
@@ -63,10 +63,10 @@
   "A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\n\nThe winners are the athletes who have passed the greater (all) number of control points for a smaller number of time, in the order of points.": "Прототип приложения для организации соревнований, процесс прохождения которого связан с отметками времени на контрольных точках.\nПобедителями считаются атлеты прошедшие большее (все) кол-во контрольных точек за за меньшее кол-во времени, в порядке следования точек.",
   "Select\ncompetition": "Назначить\nсоревнование",
   "Total registered athletes: ": "Всего зарегестрированно участников: ",
-  "Open: ": "Открыть",
-  "Close: ": "Закрыть",
-  "Order: ": "Порядок",
-  "Title: ": "Название",
+  "Open: ": "Открыть: ",
+  "Close: ": "Закрыть: ",
+  "Order: ": "Порядок: ",
+  "Title: ": "Название: ",
   "This device is not assigned to a NFC reader": "Это устройство не назначено NFC считывателем",
   "Are you sure?": "Вы уверены?",
   "This application will be closed": "Приложение будет закрыто",
