--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -12,6 +12,7 @@
   "Athlete number": "Номер атлета",
   "Cancel": "Отменить",
   "Mark": "Отметить",
+  "QR code": "QR код",
   "Scan QR code": "Сканировать QR код",
   "Set this device to admin": "Установить это устройство как административное",
   "Enter with Social account": "Вход через социальные сети",
