--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -45,7 +45,7 @@
   "fio": "фио",
   "wait": "ожидание",
   "By NFC tag": "По метке NFC",
-  "Send sms": "Отправить",
+  "Send sms": "Отправить смс",
   "Set NFC tag": "Назначить метку NFC",
   "Clear NFC tag": "Очистить метку NFC",
   "Stop scanning NFC": "Прекратить сканирование NFC",
@@ -59,6 +59,7 @@
   "Class: ": "Класс: ",
   "Number: ": "Номер: ",
   "Phone no.: ": "Телефон: +7",
+  "Status: ": "Статус: ",
   "Suggestions and suggestions send to the address ": "Предложения и пожелания отправляйте на адрес ",
   "or to the telegram": "либо в telegram",
   "A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\n\nThe winners are the athletes who have passed the greater (all) number of control points for a smaller number of time, in the order of points.": "Прототип приложения для организации соревнований, процесс прохождения которого связан с отметками времени на контрольных точках.\nПобедителями считаются атлеты прошедшие большее (все) кол-во контрольных точек за за меньшее кол-во времени, в порядке следования точек.",
@@ -117,7 +118,7 @@
   "Private Policy": "Политика конфиденциальности",
   "About": "О нас",
   "Start lists": "Стартовые листы",
-  "Start group: ": "Старотовая группа",
+  "Start group: ": "Старотовая группа: ",
   "Athlete: ": "Атлет: ",
   "Size of group is more than athletes count (%s) in class": "Размер группы больше кол-ва атлетов (%s) в классе",
   "Start": "Старт",
@@ -148,5 +149,12 @@
   "Countdown": "Обратный отсчет",
   "This nfc tag is already assigned to %s (%s)": "Эта nfc метка уже назначена %s (%s)",
   "No results previous stage": "Нет результатов предыдущего этапа",
-  "Canceled": "Отменено"
+  "Canceled": "Отменено",
+  "Is missing": "Отсутсвует",
+  "Reason for the absence": "Причина отсутствия",
+  "Allowed": "Допущен",
+  "Allowed (AAA)": "Допущен (ААА)",
+  "Did Not Start (DNS)": "Не стартовал (DNS)",
+  "Did Not Finish (DNF)": "Не финишировал (DNF)",
+  "Disqualified (DSQ)": "Дисквалификация (DSQ)"
 }
