--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -56,6 +56,7 @@
   "Competition code": "Код соревнования",
   "Enter": "Ввод",
   "Name: ": "Имя: ",
+  "Competition: ": "Соревнование: ",
   "Class: ": "Класс: ",
   "Number: ": "Номер: ",
   "Phone no.: ": "Телефон: +7",
